# math-handwriting

./: .gitignore  README.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/game/: page.tsx
app/play/: page.tsx
app/review/: page.tsx
app/setup/: page.tsx
components/canvas/: MathCanvas.tsx
hooks/: useStrokeCapture.ts
lib/: api.ts  problemGenerator.ts
math-handwriting-backend/: .env.devnev  .env.example  README.md  pyproject.toml  requirements.txt  run.py
math-handwriting-backend/app/: analytics.py  config.py  main.py  models.py
math-handwriting-backend/app/routes/: export.py  health.py  stats.py  submit.py
math-handwriting-frontend/: .gitignore  README.md  package-lock.json  tailwind.config.ts
math-handwriting-frontend/app/: page.tsx
math-handwriting-frontend/app/game/: page.tsx
math-handwriting-frontend/app/play/: page.tsx
math-handwriting-frontend/components/canvas/: MathCanvas.tsx
math-handwriting-frontend/types/: strokes.ts
python-backend/: requirements.txt  run.py  vercel.json
python-backend/app/: analytics.py  main.py  models.py
