[project]
name = "math-handwriting-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2026.2.25",
    "dnspython>=2.8.0",
    "fastapi==0.104.1",
    "motor==3.3.2",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "pymongo==4.6.1",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
]
